--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,63 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Nunito:wght@200;300;400;500;600;700;800&display=swap");
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
+.blogs {
+  padding: 25px 0;
 }
-
-body {
-  background-color: #fff;
-  font-family: "Nunito", sans-serif;
+.blogs__title {
+  text-align: center;
+  font-size: 32px;
+  padding: 25px 0;
+}
+.blogs__description {
+  width: 60%;
   font-size: 16px;
-}
-
-.container {
-  width: 90%;
-  max-width: 1200px;
+  text-align: center;
   margin: 0 auto;
+  padding-bottom: 25px;
 }
-
-.logo {
-  width: 200px;
-}
-
-section {
-  margin: 25px 0;
-}
-
-/*******  header  *******/
-header {
+.blogs__container {
   display: flex;
   justify-content: space-between;
-  margin: 25px 0 40px 0;
 }
-header h1 {
-  display: none;
-}
-header .menu {
+.blogs__container .blog {
+  flex-basis: 30%;
   display: flex;
-  justify-content: center;
-  margin: 25px 0;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  row-gap: 20px;
 }
-header .menu__link {
-  display: inline-block;
-  padding: 10px 10px;
+.blogs__container .blog__avatar {
+  width: 70px;
+  height: 70px;
 }
-header .menu__link a {
-  text-decoration-line: none;
-  color: rgb(41, 39, 39);
-  font-size: 20.8px;
+.blogs__container .blog__avatar img {
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 0 1rem 1rem -0.75rem #6a5243;
 }
-header .menu__link a:hover {
-  border-bottom: 3px solid #91a644;
+.blogs__container .blog__text {
+  text-align: center;
 }
-header .menu__link a img {
-  display: none;
+.blogs__container .blog__author {
+  align-self: flex-end;
 }
 
-/*******  Section carousel  *******/
+@media screen and (max-width: 850px) {
+  .blogs__container {
+    flex-direction: column;
+  }
+}
 .carousel {
   padding: 0 10px;
 }
@@ -107,7 +96,6 @@ header .menu__link a img {
   opacity: 1;
 }
 
-/*******  Section character  *******/
 .character {
   padding: 40px 0;
 }
@@ -154,221 +142,14 @@ header .menu__link a img {
   cursor: pointer;
 }
 
-/*******  Section slogan  *******/
-.slogan {
-  background-color: #eeddac;
+@media screen and (max-width: 550px) {
+  .character__form {
+    flex-direction: column;
+  }
+  .character__form .form__group {
+    margin: 20px;
+  }
 }
-.slogan .slogan__container {
-  display: flex;
-  justify-content: space-around;
-  padding: 40px;
-  align-items: center;
-}
-.slogan .slogan__container .slogan__text {
-  font-family: lora;
-  font-size: 40px;
-  text-align: center;
-  margin-right: 40px;
-}
-.slogan .slogan__container .slogan__btn {
-  padding: 10px 20px;
-  background-color: #91a644;
-  font-size: 19.2px;
-  color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
-  flex-shrink: 0;
-}
-.slogan .slogan__container .slogan__btn--red {
-  color: red;
-}
-
-/*******  Section blog  *******/
-.blogs {
-  padding: 25px 0;
-}
-.blogs__title {
-  text-align: center;
-  font-size: 32px;
-  padding: 25px 0;
-}
-.blogs__description {
-  width: 60%;
-  font-size: 16px;
-  text-align: center;
-  margin: 0 auto;
-  padding-bottom: 25px;
-}
-.blogs__container {
-  display: flex;
-  justify-content: space-between;
-}
-.blogs__container .blog {
-  flex-basis: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-  row-gap: 20px;
-}
-.blogs__container .blog__avatar {
-  width: 70px;
-  height: 70px;
-}
-.blogs__container .blog__avatar img {
-  width: 100%;
-  border-radius: 50%;
-  box-shadow: 0 1rem 1rem -0.75rem #6a5243;
-}
-.blogs__container .blog__text {
-  text-align: center;
-}
-.blogs__container .blog__author {
-  align-self: flex-end;
-}
-
-/*******  section gallery  *******/
-.gallery__container {
-  display: grid;
-  grid-template-columns: 1.5fr repeat(5, 1fr);
-  grid-gap: 15px;
-  margin: 25px auto;
-}
-.gallery__container .gallery__shrek-ane {
-  grid-column: 1/2;
-  grid-row: 1/3;
-  display: flex;
-  align-items: center;
-}
-.gallery__container .gallery__shrek-calin {
-  grid-column: 2/span 3;
-  grid-row: 1/2;
-}
-.gallery__container .gallery__fiona {
-  grid-column: 5/6;
-  grid-row: 1/2;
-  display: flex;
-  align-items: end;
-}
-.gallery__container .gallery__ane {
-  grid-column: 6/7;
-  grid-row: 1/3;
-  display: flex;
-  align-items: center;
-}
-.gallery__container .gallery__chat {
-  grid-column: 2/3;
-  grid-row: 2/3;
-}
-.gallery__container .gallery__shrek-face {
-  grid-column: 3/span 3;
-  grid-row: 2/3;
-}
-.gallery__container img {
-  width: 100%;
-  border-radius: 2px;
-}
-
-/*******  section statistiques  *******/
-.stats {
-  background-color: #eeddac;
-  margin-top: 40px;
-}
-.stats .container {
-  display: flex;
-}
-.stats .container .left {
-  width: 40%;
-  margin: 40px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.stats .container .left__slice-pie {
-  width: 400px;
-  height: 400px;
-  border-radius: 50%;
-  border-right: 200px solid #91a644;
-  border-top: 200px solid #6a5243;
-  border-bottom: 200px solid #6a5243;
-  border-left: 200px solid #6a5243;
-  transform: rotate(-35deg);
-}
-.stats .container .right {
-  width: 60%;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.stats .container .right__title {
-  margin-bottom: 25px;
-  font-size: 32px;
-}
-.stats .container .right__stats {
-  display: flex;
-  gap: 25%;
-  margin: 25px 0;
-}
-.stats .container .right__stats--big {
-  font-size: 32px;
-  font-weight: bold;
-}
-.stats .container .right__btn {
-  padding: 10px 20px;
-  background-color: #91a644;
-  font-size: 19.2px;
-  border-radius: 5px;
-  cursor: pointer;
-  align-self: flex-end;
-  margin-top: 25px;
-}
-.stats .container .right__btn a {
-  color: #fff;
-  text-decoration: none;
-}
-
-/*******  section movies  *******/
-.movies {
-  padding: 40px 0;
-}
-.movies__title {
-  text-align: center;
-  font-size: 32px;
-  padding: 25px 0;
-}
-.movies__description {
-  width: 60%;
-  font-size: 16px;
-  text-align: center;
-  margin: 0 auto;
-  padding-bottom: 25px;
-}
-.movies__container {
-  display: flex;
-  justify-content: space-between;
-}
-.movies__container .movie {
-  flex-basis: 20%;
-  display: flex;
-  box-shadow: 0 1.5rem 3rem -0.75rem #6a5243;
-  border-radius: 0.5rem;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 10px 10px 10px;
-  row-gap: 20px;
-}
-.movies__container .movie__title {
-  text-align: center;
-}
-.movies__container .movie__title--caption {
-  font-size: 12.8px;
-}
-.movies__container .movie .movies__container .movie__text {
-  text-align: justify;
-}
-
-/*******  section contact  *******/
 .contact {
   position: relative;
   margin: 40px auto;
@@ -431,61 +212,6 @@ header .menu__link a img {
   cursor: pointer;
 }
 
-/*******  footer  *******/
-footer {
-  margin-top: 25px;
-}
-footer .container__logo {
-  display: flex;
-  justify-content: center;
-}
-footer .menu {
-  display: flex;
-  justify-content: center;
-  margin: 25px 0;
-}
-footer .menu__links {
-  display: inline-block;
-}
-footer .menu__links a {
-  display: flex;
-  text-decoration-line: none;
-  align-items: flex-end;
-  padding: 10px 10px;
-  color: rgb(41, 39, 39);
-}
-footer .menu__links span {
-  font-size: 20px;
-}
-footer .menu__links--span:hover {
-  border-bottom: 3px solid #91a644;
-}
-footer .separator {
-  border-top: solid 3px #6a5243;
-}
-footer .last-line {
-  display: flex;
-  justify-content: space-between;
-  margin: 25px 0;
-}
-footer .last-line__social img {
-  width: 20px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-footer .last-line__contact {
-  display: flex;
-  align-items: center;
-}
-footer .last-line__contact--phone {
-  font-size: 0.9rem;
-  margin-left: 0 !important;
-}
-footer .last-line__contact img {
-  width: 15px;
-  margin: 0 5px 0 10px;
-}
-
 /*******  Media Query  *******/
 @media screen and (max-width: 1300px) {
   .contact__form .form__group--row {
@@ -498,20 +224,100 @@ footer .last-line__contact img {
   .contact__form .form__group--row .form__group--margin-top {
     margin-top: 20px;
   }
-  #slice-pie {
-    transform: scale(0.9) rotate(-45deg);
-  }
-  .movies__container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+}
+.contact__form {
+  position: static;
+  transform: none;
+  max-width: 80%;
+  margin: 20px auto;
+}
+.contact__form .form__group--row {
+  flex-direction: row;
+}
+.contact__form .form__group--row .form__group--margin-right {
+  margin-right: 10px;
+}
+.contact__form .form__group--row .form__group--margin-top {
+  margin-top: 0;
+}
+.contact__form .form__group--row .form__group--width {
+  flex-grow: 1;
+}
+
+@media screen and (max-width: 650px) {
+  .contact__form {
+    max-width: 100%;
   }
 }
-@media screen and (max-width: 1150px) {
-  #slice-pie {
-    transform: scale(0.8) rotate(-55deg);
-  }
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
+
+body {
+  background-color: #fff;
+  font-family: "Nunito", sans-serif;
+  font-size: 16px;
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 200px;
+}
+
+section {
+  margin: 25px 0;
+}
+
+.gallery__container {
+  display: grid;
+  grid-template-columns: 1.5fr repeat(5, 1fr);
+  grid-gap: 15px;
+  margin: 25px auto;
+}
+.gallery__container .gallery__shrek-ane {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  display: flex;
+  align-items: center;
+}
+.gallery__container .gallery__shrek-calin {
+  grid-column: 2/span 3;
+  grid-row: 1/2;
+}
+.gallery__container .gallery__fiona {
+  grid-column: 5/6;
+  grid-row: 1/2;
+  display: flex;
+  align-items: end;
+}
+.gallery__container .gallery__ane {
+  grid-column: 6/7;
+  grid-row: 1/3;
+  display: flex;
+  align-items: center;
+}
+.gallery__container .gallery__chat {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.gallery__container .gallery__shrek-face {
+  grid-column: 3/span 3;
+  grid-row: 2/3;
+}
+.gallery__container img {
+  width: 100%;
+  border-radius: 2px;
+}
+
 @media screen and (max-width: 1024px) {
   .gallery__container {
     grid-template-columns: repeat(4, 1fr);
@@ -550,28 +356,110 @@ footer .last-line__contact img {
     grid-column: 2/span 3;
     grid-row: 2/span 2;
   }
-  .contact__form {
-    position: static;
-    transform: none;
-    max-width: 80%;
-    margin: 20px auto;
+}
+@media screen and (max-width: 720px) {
+  .gallery__container {
+    display: flex;
+    flex-direction: column;
   }
-  .contact__form .form__group--row {
-    flex-direction: row;
+  .gallery__container .gallery__ane {
+    display: flex;
+    align-items: start;
   }
-  .contact__form .form__group--row .form__group--margin-right {
-    margin-right: 10px;
-  }
-  .contact__form .form__group--row .form__group--margin-top {
-    margin-top: 0;
-  }
-  .contact__form .form__group--row .form__group--width {
-    flex-grow: 1;
-  }
-  #slice-pie {
-    transform: scale(0.7) rotate(-65deg);
+  .gallery__container .gallery__ane img {
+    max-width: 50%;
+    padding-left: 10%;
   }
 }
+footer .menu__links a, header .menu__link a {
+  text-decoration-line: none;
+  color: rgb(41, 39, 39);
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: strech;
+  margin: 25px 0 40px 0;
+}
+header h1 {
+  display: none;
+}
+header .menu {
+  display: flex;
+  justify-content: center;
+  align-items: strech;
+  margin: 25px 0;
+}
+header .menu__link {
+  display: inline-block;
+  padding: 10px 10px;
+}
+header .menu__link a {
+  font-size: 20.8px;
+}
+header .menu__link a:hover {
+  border-bottom: 3px solid #91a644;
+}
+header .menu__link a img {
+  display: none;
+}
+
+footer {
+  margin-top: 25px;
+}
+footer .container__logo {
+  display: flex;
+  justify-content: center;
+  align-items: strech;
+}
+footer .menu {
+  display: flex;
+  justify-content: center;
+  align-items: strech;
+  margin: 25px 0;
+}
+footer .menu__links {
+  display: inline-block;
+}
+footer .menu__links a {
+  display: flex;
+  align-items: flex-end;
+  padding: 10px 10px;
+}
+footer .menu__links span {
+  font-size: 20px;
+}
+footer .menu__links--span:hover {
+  border-bottom: 3px solid #91a644;
+}
+footer .separator {
+  border-top: solid 3px #6a5243;
+}
+footer .last-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: strech;
+  margin: 25px 0;
+}
+footer .last-line__social img {
+  width: 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+footer .last-line__contact {
+  display: flex;
+  align-items: center;
+}
+footer .last-line__contact--phone {
+  font-size: 0.9rem;
+  margin-left: 0 !important;
+}
+footer .last-line__contact img {
+  width: 15px;
+  margin: 0 5px 0 10px;
+}
+
 @media screen and (max-width: 950px) {
   header {
     flex-direction: column;
@@ -607,12 +495,6 @@ footer .last-line__contact img {
     width: 30px;
     margin: 0 auto;
   }
-  .slogan__container {
-    flex-direction: column;
-  }
-  .slogan__container .slogan__btn {
-    margin-top: 40px;
-  }
 }
 @media screen and (max-width: 850px) {
   footer .menu ul {
@@ -637,50 +519,183 @@ footer .last-line__contact img {
     grid-column: 1/2;
     grid-row: 2/3;
   }
-  #slice-pie {
-    transform: scale(0.6) rotate(-75deg);
+}
+/*******  section movies  *******/
+.movies {
+  padding: 40px 0;
+}
+.movies__title {
+  text-align: center;
+  font-size: 32px;
+  padding: 25px 0;
+}
+.movies__description {
+  width: 60%;
+  font-size: 16px;
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+.movies__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: strech;
+}
+.movies__container .movie {
+  flex-basis: 20%;
+  display: flex;
+  box-shadow: 0 1.5rem 3rem -0.75rem #6a5243;
+  border-radius: 0.5rem;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 10px 10px 10px;
+  row-gap: 20px;
+}
+.movies__container .movie__title {
+  text-align: center;
+}
+.movies__container .movie__title--caption {
+  font-size: 12.8px;
+}
+.movies__container .movie .movies__container .movie__text {
+  text-align: justify;
+}
+
+@media screen and (max-width: 1300px) {
+  .movies__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
   }
-  .blogs__container {
-    flex-direction: column;
-  }
+}
+@media screen and (max-width: 850px) {
   .movies__container {
     grid-template-columns: 1fr;
     gap: 40px;
   }
 }
-@media screen and (max-width: 720px) {
-  .gallery__container {
-    display: flex;
+.slogan {
+  background-color: #eeddac;
+}
+.slogan .slogan__container {
+  display: flex;
+  justify-content: space-around;
+  padding: 40px;
+  align-items: center;
+}
+.slogan .slogan__container .slogan__text {
+  font-family: lora;
+  font-size: 40px;
+  text-align: center;
+  margin-right: 40px;
+}
+.slogan .slogan__container .slogan__btn {
+  padding: 10px 20px;
+  background-color: #91a644;
+  font-size: 19.2px;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+.slogan .slogan__container .slogan__btn--red {
+  color: red;
+}
+
+@media screen and (max-width: 950px) {
+  .slogan__container {
     flex-direction: column;
   }
-  .gallery__container .gallery__ane {
-    display: flex;
-    align-items: start;
+  .slogan__container .slogan__btn {
+    margin-top: 40px;
   }
-  .gallery__container .gallery__ane img {
-    max-width: 50%;
-    padding-left: 10%;
-  }
+}
+.stats {
+  background-color: #eeddac;
+  margin-top: 40px;
+}
+.stats .container {
+  display: flex;
+}
+.stats .container .left {
+  width: 40%;
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.stats .container .left__slice-pie {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  border-right: 200px solid #91a644;
+  border-top: 200px solid #6a5243;
+  border-bottom: 200px solid #6a5243;
+  border-left: 200px solid #6a5243;
+  transform: rotate(-35deg);
+}
+.stats .container .right {
+  width: 60%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.stats .container .right__title {
+  margin-bottom: 25px;
+  font-size: 32px;
+}
+.stats .container .right__stats {
+  display: flex;
+  gap: 25%;
+  margin: 25px 0;
+}
+.stats .container .right__stats--big {
+  font-size: 32px;
+  font-weight: bold;
+}
+.stats .container .right__btn {
+  padding: 10px 20px;
+  background-color: #91a644;
+  font-size: 19.2px;
+  border-radius: 5px;
+  cursor: pointer;
+  align-self: flex-end;
+  margin-top: 25px;
+}
+.stats .container .right__btn a {
+  color: #fff;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1300px) {
   #slice-pie {
-    display: none;
+    transform: scale(0.9) rotate(-45deg);
   }
+}
+@media screen and (max-width: 1150px) {
+  #slice-pie {
+    transform: scale(0.8) rotate(-55deg);
+  }
+}
+@media screen and (max-width: 1024px) {
+  #slice-pie {
+    transform: scale(0.7) rotate(-65deg);
+  }
+}
+@media screen and (max-width: 850px) {
+  #slice-pie {
+    transform: scale(0.6) rotate(-75deg);
+  }
+}
+@media screen and (max-width: 720px) {
   .stats .container .left {
     width: 0%;
   }
   .stats .container .right {
     width: 100%;
   }
-}
-@media screen and (max-width: 650px) {
-  .contact__form {
-    max-width: 100%;
-  }
-}
-@media screen and (max-width: 550px) {
-  .character__form {
-    flex-direction: column;
-  }
-  .character__form .form__group {
-    margin: 20px;
+  #slice-pie {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
