--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,843 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500&family=Nunito:wght@200;300;400;500;600;700;800&display=swap");
-
-$color-white: #fff;
-$color-primary: #91a644;
-$color-secondary: #eeddac;
-$color-accent: #6a5243;
-
-$font-primary: "Nunito", sans-serif;
-$font-accent: "Lora", serif;
-$font-size: 16px;
-
-$separator: solid 3px $color-accent;
-
-$border-primary: 3px solid $color-primary;
-$border-secondary: 3px solid $color-secondary;
-$border-white: 3px solid $color-white;
-
-//$grid-unit: (1200 /36) px;
-
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
-
-body {
-  background-color: $color-white;
-  font-family: $font-primary;
-  font-size: $font-size;
-}
-
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.logo {
-  width: 200px;
-}
-
-// Voir si conserve
-section {
-  margin: 25px 0;
-  // TODO ?? les margins ne s'additionnent pas mais se combinent?
-}
-
-/*******  header  *******/
-header {
-  display: flex;
-  justify-content: space-between;
-  margin: 25px 0 40px 0;
-
-  h1 {
-    display: none;
-  }
-
-  .menu {
-    display: flex;
-    justify-content: center;
-    margin: 25px 0;
-
-    &__link {
-      display: inline-block;
-      padding: 10px 10px;
-
-      a {
-        //display: flex;
-        //align-items: flex-end;
-        text-decoration-line: none;
-        color: rgb(41, 39, 39);
-        font-size: $font-size * 1.3;
-        // scroll-behavior: smooth; TODO faire transition lente
-
-        &:hover {
-          border-bottom: $border-primary;
-        }
-        img {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-/*******  Section carousel  *******/
-.carousel {
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  padding: 0 10px;
-
-  .carousel__container {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-
-    .slider {
-      display: flex;
-      overflow-y: hidden;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      scroll-behavior: smooth;
-      box-shadow: 0 1.5rem 3rem -0.75rem $color-accent;
-      border-radius: 0.5rem;
-      scrollbar-width: none;
-
-      img {
-        flex: 1 0 100%;
-        scroll-snap-align: start;
-        object-fit: cover;
-      }
-    }
-
-    .slider__nav {
-      display: flex;
-      column-gap: 1rem;
-      position: absolute;
-      bottom: 1.25rem;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 1;
-
-      a {
-        width: 0.5rem;
-        height: 0.5rem;
-        border-radius: 50%;
-        background-color: $color-white;
-        opacity: 0.75;
-        transition: opacity ease 250ms;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-  }
-}
-
-/*******  Section character  *******/
-.character {
-  padding: 40px 0;
-  &__text {
-    font-size: $font-size * 1.2;
-    text-align: center;
-  }
-
-  &__form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-
-    .form__group {
-      margin-right: 40px;
-      height: 42px;
-
-      .form__label {
-        &--hidden {
-          display: none;
-        }
-      }
-
-      input {
-        width: 250px;
-        height: 42px;
-        padding: 4px;
-        border: $border-secondary;
-        border-radius: 5px;
-        outline: none;
-
-        &:hover {
-          outline: none;
-          border: $border-primary;
-        }
-      }
-    }
-
-    .form__submit {
-      display: flex;
-      justify-content: end;
-
-      input {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        background-color: $color-primary;
-        color: $color-white;
-        font-size: $font-size * 1.2;
-        cursor: pointer;
-        // TODO faire hover sur les bouttons
-      }
-    }
-    // TODO faire hover sur les bouttons
-  }
-}
-
-/*******  Section slogan  *******/
-.slogan {
-  background-color: $color-secondary;
-
-  .slogan__container {
-    display: flex;
-    justify-content: space-around;
-    padding: 40px;
-    align-items: center;
-
-    .slogan__text {
-      font-family: lora;
-      font-size: $font-size * 2.5;
-      text-align: center;
-      margin-right: 40px;
-    }
-
-    .slogan__btn {
-      padding: 10px 20px;
-      background-color: $color-primary;
-      font-size: $font-size * 1.2;
-      color: $color-white;
-      border-radius: 5px;
-      cursor: pointer;
-      flex-shrink: 0;
-
-      &--red {
-        color: red;
-      }
-      // TODO faire hover sur les bouttons
-    }
-  }
-}
-
-/*******  Section blog  *******/
-.blogs {
-  padding: 25px 0;
-  &__title {
-    text-align: center;
-    font-size: $font-size * 2;
-    padding: 25px 0;
-  }
-
-  &__description {
-    width: 60%;
-    font-size: $font-size;
-    text-align: center;
-    margin: 0 auto;
-    padding-bottom: 25px;
-  }
-
-  &__container {
-    display: flex;
-    justify-content: space-between;
-
-    .blog {
-      flex-basis: 30%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px;
-      row-gap: 20px;
-
-      &__avatar {
-        width: 70px;
-        height: 70px;
-
-        img {
-          width: 100%;
-          border-radius: 50%;
-          box-shadow: 0 1rem 1rem -0.75rem $color-accent;
-        }
-      }
-
-      &__text {
-        text-align: center;
-      }
-      &__author {
-        align-self: flex-end;
-      }
-    }
-  }
-}
-
-/*******  section gallery  *******/
-.gallery__container {
-  display: grid;
-  grid-template-columns: 1.5fr repeat(5, 1fr);
-  grid-gap: 15px;
-  margin: 25px auto;
-
-  .gallery {
-    &__shrek-ane {
-      grid-column: 1 / 2;
-      grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
-    }
-    &__shrek-calin {
-      grid-column: 2 / span 3;
-      grid-row: 1 / 2;
-    }
-    &__fiona {
-      grid-column: 5 / 6;
-      grid-row: 1 / 2;
-      display: flex;
-      align-items: end;
-    }
-    &__ane {
-      grid-column: 6 / 7;
-      grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
-    }
-    &__chat {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3;
-    }
-    &__shrek-face {
-      grid-column: 3 / span 3;
-      grid-row: 2 / 3;
-    }
-  }
-
-  img {
-    width: 100%;
-    border-radius: 2px;
-  }
-}
-
-/*******  section statistiques  *******/
-.stats {
-  background-color: $color-secondary;
-  margin-top: 40px;
-
-  .container {
-    display: flex;
-    .left {
-      width: 40%;
-      margin: 40px auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      &__slice-pie {
-        width: 400px;
-        height: 400px;
-        border-radius: 50%;
-        border-right: 200px solid $color-primary;
-        border-top: 200px solid $color-accent;
-        border-bottom: 200px solid $color-accent;
-        border-left: 200px solid $color-accent;
-        transform: rotate(-35deg);
-      }
-    }
-
-    .right {
-      width: 60%;
-      padding: 10px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      &__title {
-        margin-bottom: 25px;
-        font-size: $font-size * 2;
-      }
-
-      &__stats {
-        display: flex;
-        gap: 25%;
-        margin: 25px 0;
-
-        &--big {
-          font-size: $font-size * 2;
-          font-weight: bold;
-        }
-      }
-
-      &__btn {
-        padding: 10px 20px;
-        background-color: $color-primary;
-        font-size: $font-size * 1.2;
-        border-radius: 5px;
-        cursor: pointer;
-        align-self: flex-end;
-        margin-top: 25px;
-
-        a {
-          color: $color-white;
-          text-decoration: none;
-        }
-      }
-    }
-  }
-}
-
-/*******  section movies  *******/
-.movies {
-  padding: 40px 0;
-
-  &__title {
-    text-align: center;
-    font-size: $font-size * 2;
-    padding: 25px 0;
-  }
-
-  &__description {
-    width: 60%;
-    font-size: $font-size;
-    text-align: center;
-    margin: 0 auto;
-    padding-bottom: 25px;
-  }
-
-  &__container {
-    display: flex;
-    justify-content: space-between;
-
-    .movie {
-      flex-basis: 20%;
-      display: flex;
-      box-shadow: 0 1.5rem 3rem -0.75rem $color-accent;
-      border-radius: 0.5rem;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px 10px 10px 10px;
-      row-gap: 20px;
-
-      &__title {
-        text-align: center;
-
-        &--caption {
-          font-size: $font-size * 0.8;
-        }
-      }
-
-      & &__text {
-        text-align: justify;
-      }
-    }
-  }
-}
-
-/*******  section contact  *******/
-.contact {
-  position: relative;
-  margin: 40px auto;
-
-  iframe {
-    width: 100%;
-    height: 500px;
-    border: 0;
-  }
-
-  &__form {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 20px;
-    background-color: $color-secondary;
-    padding: 10px;
-    border-radius: 10px;
-    max-width: 30%;
-
-    h3 {
-      margin: 10px 0;
-      //font-size: 40px;
-    }
-
-    .form__group {
-      margin: 20px 0;
-
-      .form__label {
-        &--hidden {
-          display: none;
-        }
-      }
-
-      input,
-      textarea {
-        width: 100%;
-        background-color: $color-secondary;
-        padding: 4px;
-        border: 0;
-        border-bottom: $border-white;
-        outline: none;
-
-        &:hover {
-          outline: none;
-          border-bottom: $border-primary;
-        }
-      }
-    }
-
-    .form__group--row {
-      display: flex;
-
-      .form__group--margin-right {
-        margin-right: 10px;
-      }
-    }
-
-    .form__submit {
-      display: flex;
-      justify-content: end;
-
-      input {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        background-color: $color-primary;
-        color: $color-white;
-        font-size: $font-size * 1.2;
-        cursor: pointer;
-        // TODO faire hover sur les bouttons
-      }
-    }
-  }
-}
-
-/*******  footer  *******/
-footer {
-  margin-top: 25px;
-
-  .container__logo {
-    // Voir si je laisse là ou remonte pour être utile a header
-    display: flex;
-    justify-content: center;
-  }
-
-  .menu {
-    display: flex;
-    justify-content: center;
-    margin: 25px 0;
-
-    &__links {
-      display: inline-block;
-
-      a {
-        display: flex;
-        text-decoration-line: none;
-        align-items: flex-end;
-        padding: 10px 10px;
-        color: rgb(41, 39, 39);
-      }
-
-      span {
-        font-size: 20px;
-      }
-
-      &--span:hover {
-        border-bottom: $border-primary;
-      }
-    }
-  }
-
-  // TODO réparer menu footer
-
-  .separator {
-    border-top: $separator;
-  }
-  .last-line {
-    display: flex;
-    justify-content: space-between;
-    margin: 25px 0;
-
-    &__social {
-      img {
-        width: 20px;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-    }
-    &__contact {
-      display: flex;
-      align-items: center;
-
-      &--phone {
-        font-size: 0.9rem;
-        margin-left: 0 !important; //TODO ??
-      }
-
-      img {
-        width: 15px;
-        margin: 0 5px 0 10px;
-      }
-    }
-  }
-}
-
-/*******  Media Query  *******/
-
-// TODO ?? vérifier comment placer media query
-@media screen and (max-width: 1300px) {
-  .contact__form {
-    .form__group--row {
-      display: flex;
-      flex-direction: column;
-
-      .form__group--margin-right {
-        margin-right: 0;
-      }
-      .form__group--margin-top {
-        margin-top: 20px;
-      }
-    }
-  }
-  #slice-pie {
-    transform: scale(0.9) rotate(-45deg);
-  }
-  .movies {
-    &__container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 40px;
-    }
-  }
-}
-
-@media screen and (max-width: 1150px) {
-  #slice-pie {
-    transform: scale(0.8) rotate(-55deg);
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .gallery__container {
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-
-    .gallery {
-      &__shrek-ane {
-        grid-column: 2 / span 3;
-        grid-row: 4 / 5;
-        display: flex;
-        justify-content: center;
-
-        img {
-          max-width: 60%;
-        }
-      }
-      &__shrek-calin {
-        grid-column: 1 / span 3;
-        grid-row: 1 / 2;
-      }
-      &__fiona {
-        grid-column: 4 / 5;
-        grid-row: 1 / 2;
-        display: flex;
-        align-items: end;
-      }
-      &__ane {
-        grid-column: 1 / 2;
-        grid-row: 3 / span 2;
-        display: flex;
-        align-items: start;
-      }
-      &__chat {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-      }
-      &__shrek-face {
-        grid-column: 2 / span 3;
-        grid-row: 2 / span 2;
-      }
-    }
-  }
-
-  .contact__form {
-    position: static;
-    transform: none;
-    max-width: 80%;
-    margin: 20px auto;
-
-    .form__group--row {
-      flex-direction: row;
-
-      .form__group--margin-right {
-        margin-right: 10px;
-      }
-      .form__group--margin-top {
-        margin-top: 0;
-      }
-      .form__group--width {
-        flex-grow: 1;
-      }
-    }
-  }
-  #slice-pie {
-    transform: scale(0.7) rotate(-65deg);
-  }
-}
-
-@media screen and (max-width: 950px) {
-  header {
-    flex-direction: column;
-
-    .container__logo {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .menu {
-      margin: 40px 0;
-
-      ul {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-      }
-
-      &__link {
-        //display: inline-block;
-        //padding: 10px 10px;
-        background-color: $color-secondary;
-        flex-grow: 1;
-        margin: 0 10px;
-        border-radius: 10px;
-      }
-
-      &__link:hover {
-        flex-grow: 2;
-        background-color: $color-primary;
-      }
-
-      .link__text {
-        display: none;
-      }
-
-      .link__img {
-        display: block;
-        width: 30px;
-        margin: 0 auto;
-      }
-    }
-  }
-
-  .slogan__container {
-    flex-direction: column;
-
-    .slogan__btn {
-      margin-top: 40px;
-    }
-  }
-}
-
-@media screen and (max-width: 850px) {
-  footer {
-    .menu ul {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .last-line {
-      display: grid !important; // TODO ?? pourquoi je dois mettre !important
-      grid-template-columns: 2fr 1fr;
-
-      &__author {
-        grid-column: 1/2;
-        grid-row: 1/2;
-      }
-      &__social {
-        grid-column: 2/3;
-        grid-row: 1/3;
-        align-self: center;
-        justify-self: end;
-      }
-      &__contact {
-        grid-column: 1/2;
-        grid-row: 2/3;
-      }
-    }
-  }
-  #slice-pie {
-    transform: scale(0.6) rotate(-75deg);
-  }
-  .blogs {
-    &__container {
-      flex-direction: column;
-    }
-  }
-  .movies {
-    &__container {
-      grid-template-columns: 1fr;
-      gap: 40px;
-    }
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .gallery__container {
-    display: flex;
-    flex-direction: column;
-
-    .gallery {
-      &__ane {
-        display: flex;
-        align-items: start;
-
-        img {
-          max-width: 50%;
-          padding-left: 10%;
-        }
-      }
-    }
-  }
-  #slice-pie {
-    display: none;
-  }
-  .stats {
-    .container {
-      .left {
-        width: 0%;
-      }
-      .right {
-        width: 100%;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .contact__form {
-    max-width: 100%;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .character__form {
-    flex-direction: column;
-
-    .form__group {
-      margin: 20px;
-    }
-  }
-  //footer {
-  //.last-line {
-  //&__contact {
-  //}
-  //}
-  //}
-}
+@use "utilities/variables";
+@use "utilities/blog";
+@use "utilities/carousel";
+@use "utilities/character";
+@use "utilities/contact";
+@use "utilities/general";
+@use "utilities/gallery";
+@use "utilities/header-footer";
+@use "utilities/movies";
+@use "utilities/slogan";
+@use "utilities/stats";
